# HtmlRAG

./: LICENSE  README.md  htmlrag_env.yml
HtmlRAG/: __init__.py  html_utils.py  pruner.py  tree_gen.py  tree_rerank.py
evaluate_utils/: __init__.py
evaluate_utils/rouge_chinese/: rouge.py  rouge_score.py
flashrag_refiner/: __init__.py  jinaai_reader.py  kg_refiner.py  llmlingua_compressor.py  refiner.py  selective_context_compressor.py
html4rag/: anno_ui.py  arxiv_html_spider.py  bing_url_request.py  chat_inference.py  chunk_rerank.py  chunk_rerank_tree_gen.py  chunk_rerank_tree_rerank.py  claude.py  fastapi_server.py  fill_chunk.py  gradio_test.py  html2json.py  html_utils.py  langchain_chunk.py  model_convert.py  moonshot.py  oai.py  ppl_inference.py  query_rewrite_inference.py  run_htmlrag_pipeline.py  sample_from_tree_rerank.py  simplify_html.py  splitter_html.py  tag_relevance_annotation.py  tree_gen.py  tree_rerank.py  tree_rerank_tree_gen.py  treegen_make_sample.py  trim_html_chunk_rerank.py  trim_html_fill_chunk.py  trim_html_tree_gen.py  trim_html_tree_rerank.py
html_data/asqa/: asqa-test.jsonl
html_data/hotpot-qa/: hotpot-qa-test.jsonl
html_data/nq/: nq-test.jsonl
html_data/trivia-qa/: trivia-qa-test.jsonl
jupyter/: answer_recall.ipynb  eval_scrips.ipynb  langchain_text.ipynb  module_test.ipynb  preliminary_experiment.ipynb  process_datasets.ipynb  tree_rerank.ipynb
llm_modeling/ChatGLM/: config.json  modeling_chatglm.py  seq_para_utils.py  tree_gen_utils.py
llm_modeling/Llama32/: README.md  configuration_llama.py  (+2 more)
scripts/: anno_ui.sh  bing_url_request.sh  chat_inference.sh  chunk_rerank.sh  chunk_rerank_tree_gen.sh  chunk_rerank_tree_rerank.sh  fastapi_server.sh  html_spider.sh  jinaai_reader.sh  langchain_chunk.sh  longllmlingua.sh  offline_inference.sh  ppl_inference.sh  query_rewrite_inference.sh  sample_from_tree_rerank.sh  search_pipeline_apply.sh  selective_context.sh  simplify_html.sh  tag_relevance_annotation.sh  tree_gen.sh  tree_rerank.sh  tree_rerank_tree_gen.sh  treegen_make_sample.sh  trim_html_chunk_rerank.sh  trim_html_fill_chunk.sh  trim_html_tree_gen.sh  trim_html_tree_rerank.sh
search_utils/: bing_search.py  extract_web_contents.py  kiltbm25.py  search_pipeline_apply.py
sft/: .deepspeed_env  dataset.py  noisy_utils.py  recordio.py  train_chat_ds.py
toolkit/: README.md  README_zh.md  pyproject.toml
toolkit/HtmlRAG/: pruner.py
toolkit/htmlrag/: html_utils.py  pruner.py
(+15 files in other folders)
